service_ingress/01_service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mod08-my-nginx-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: mod08-my-nginx
