service_ingress/10_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mod07-my-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mod07-my-nginx-clusterip
                port: 
                  number: 80
